--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         }
     ],
     "require": {
-        "php": ">=7.0"
+        "php": ">=7.0",
+        "zendframework/zend-mvc-console": "^1.1"
     },
     "autoload": {
         "psr-4": {
